--- a/demo.ipynb
+++ b/demo.ipynb
@@ -870,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.13 (default, Oct 18 2022, 18:57:03) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
