--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "4  7.mp4               1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,16 +278,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(df_spoof['fname'], df_spoof['liveness_score'], test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(df['fname'], df['liveness_score'], test_size=0.2, stratify= df['liveness_score'], random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "'1.mp4'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
     "\n",
     "path = '/home/vietlq4/zaloaichallenge/zaloai/train/videos'\n",
     "annotation_path = '/home/vietlq4/zaloaichallenge/zaloai/train/label.csv'\n",
-    "annotation_out_file = '/home/vietlq4/zaloaichallenge/zaloai/train/test_onlyspoof_annotations.txt'\n",
+    "annotation_out_file = '/home/vietlq4/zaloaichallenge/zaloai/train/train_annotations.txt'\n",
     "\n",
     "# video_filenames = os.listdir(path)\n",
     "label_df = None\n",
@@ -348,7 +348,7 @@
     "\n",
     "with open(annotation_out_file, 'w') as f:\n",
     "\n",
-    "    for video_filename in sorted(X_test, key= lambda x: int(x)):\n",
+    "    for video_filename in sorted(X_train, key= lambda x: int(x)):\n",
     "        start_frame = 0\n",
     "        video_path = os.path.join(path, video_filename)\n",
     "        try:\n",
@@ -870,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13 (default, Oct 18 2022, 18:57:03) \n[GCC 11.2.0]"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
