--- a/predict_notebook.ipynb
+++ b/predict_notebook.ipynb
@@ -190,19 +190,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '/data'\n",
-    "test_cases = sorted(os.listdir(data_path))"
+    "data_path = '/home/vietlq4/Downloads/public_test_2/videos'\n",
+    "test_cases = sorted(os.listdir(data_path), key= lambda x: int(x.replace('.mp4','')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vietlq4/miniconda3/envs/py37/lib/python3.7/site-packages/torch/nn/functional.py:1967: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
+      "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n"
+     ]
+    }
+   ],
    "source": [
     "all_predicted_time = {}\n",
     "all_result = {}\n",
